--- a/assets/css/modules/_hero.css
+++ b/assets/css/modules/_hero.css
@@ -25,10 +25,22 @@
 }
 
 .discover{
+    width: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    margin: 20px auto;
+    border-bottom: 1px solid #000;
+}
+
+.discover p{
     font-size: 12px;
     text-align: center;
-    cursor: pointer;
-    margin: 30px 0;
+}
+
+.arrow-right{
+    width: 15px;
 }
 
 }
@@ -45,10 +57,23 @@
 }
 
 .discover{
+    width: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    margin: 20px auto;
+    border-bottom: 1px solid #000;
+}
+
+.discover p{
     font-size: 12px;
     text-align: center;
-    cursor: pointer;
-    margin-top: 30px;
 }
+
+.arrow-right{
+    width: 15px;
+}
+
 
 }
