--- a/assets/css/modules/_service.css
+++ b/assets/css/modules/_service.css
@@ -10,9 +10,16 @@
     margin: 200px 0;
 }
 
+.serviceImage{
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    width: 60%;
+}
+
 .boutique{
     position: relative;
-    width: 15%;
+    width: 30%;
 }
 
 .boutiqueTitle{
@@ -24,7 +31,7 @@
 
 .cafe{
     position: relative;
-    width: 15%;
+    width: 30%;
 }
 
 .cafeTitle{
@@ -35,7 +42,7 @@
 }
 .musique{
     position: relative;
-    width: 15%;
+    width: 30%;
 }
 
 .musiqueTitle{
