--- a/assets/css/modules/_header.css
+++ b/assets/css/modules/_header.css
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     border-bottom: 1px solid #E6E6E6;
+    justify-content: space-between;
 }
 
 .titleBox{
@@ -18,11 +19,16 @@
 .mainTitle{
     font-size: 30px;
     text-align: center;
+    cursor: pointer;
 }
 
 .subTitle{
     font-size: 14px;
     text-align: center;
+}
+
+.navigation{
+    position: relative;
 }
 
 .tab-area{
@@ -32,6 +38,7 @@
 .tab{
     font-size: 12px;
     margin: 0 10px;
+    cursor: pointer;
 }
 
 .tab:first-child{
@@ -66,25 +73,43 @@
 .panel-list li{
     font-size: 12px;
     margin: 0 10px;
+    cursor: pointer;
 }
 
 .panel.active{
     display: block;
 }
 
+.panel-addClass{
+    border-bottom: 2px solid #000;
+}
+
 .header-item{
     display: flex;
 }
 
-.country,.language,.user{
+.country,.user{
     margin-right: 30px;
+    cursor: pointer;
+}
+
+.language{
+    display: flex;
+    align-items: center;
+    margin-right: 30px;
+    cursor: pointer;
+}
+
+.language p{
+    font-size: 12px;
+    font-weight: bold;
+    margin-right: 5px;
 }
 
 .bag{
     margin-right: 10px;
+    cursor: pointer;
 }
-
-
 
 }
 
@@ -92,6 +117,7 @@
     /* SP style */
 .header-top{
     padding: 10px;
+    border-bottom: 1px solid #E6E6E6;
 }
 
 .menu-btn {
