--- a/assets/css/modules/_hero.css
+++ b/assets/css/modules/_hero.css
@@ -39,7 +39,7 @@
     text-align: center;
 }
 
-.arrow-right{
+.hero-arrow-right{
     width: 15px;
 }
 
@@ -71,7 +71,7 @@
     text-align: center;
 }
 
-.arrow-right{
+.hero-arrow-right{
     width: 15px;
 }
 
