--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url('./modules/_common.css');
+@import url('C:/Users/siy_s/OneDrive/ドキュメント/portfolio/portfolio1/assets/css/modules/_common.css');
 @import url('./modules/_header.css');
 @import url('./modules/_searchForm.css');
 @import url('./modules/_modal.css');
@@ -6,4 +6,4 @@
 @import url('./modules/_newsletter.css');
 @import url('./modules/_selection.css');
 @import url('./modules/_service.css');
-@import url('./modules/_footer.css');
+@import url('C:/Users/siy_s/OneDrive/ドキュメント/portfolio/portfolio1/assets/css/modules/_footer.css');
