--- a/assets/css/modules/_searchForm.css
+++ b/assets/css/modules/_searchForm.css
@@ -5,15 +5,17 @@
     /* PC style */
 
 .search_container{
-    position: relative;
     border-bottom: 2px solid #000;
-    height: 2.3em;
+    height: 80px;
     width: 500px;
     overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .search_container input[type="text"]{
     border: none;
-    height: 2.0em;
+    line-height: 80px;
     font-size: 12px;
 }
 .search_container input[type="text"]:focus {
@@ -26,7 +28,6 @@
     /* SP style */
 
 .search_container{
-    position: relative;
     border-bottom: 2px solid #000;
     height: 2.3em;
     width: 100%;
