--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,9 @@
-@import url('assets/css/modules/_common.css');
-@import url('assets/css/modules/_header.css');
-@import url('assets/css/modules/_searchForm.css');
-@import url('assets/css/modules/_modal.css');
-@import url('assets/css/modules/_hero.css');
-@import url('assets/css/modules/_newsletter.css');
-@import url('assets/css/modules/_selection.css');
-@import url('assets/css/modules/_service.css');
-@import url('assets/css/modules/_footer.css');
+@import url('modules/_common.css');
+@import url('modules/_header.css');
+@import url('modules/_searchForm.css');
+@import url('modules/_modal.css');
+@import url('modules/_hero.css');
+@import url('modules/_newsletter.css');
+@import url('modules/_selection.css');
+@import url('modules/_service.css');
+@import url('modules/_footer.css');
