--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,9 @@
-@import url('modules/_common.css');
-@import url('modules/_header.css');
-@import url('modules/_searchForm.css');
-@import url('modules/_modal.css');
-@import url('modules/_hero.css');
-@import url('modules/_newsletter.css');
-@import url('modules/_selection.css');
-@import url('modules/_service.css');
-@import url('modules/_footer.css');
+@import 'modules/_common.css';
+@import 'modules/_header.css';
+@import 'modules/_searchForm.css';
+@import 'modules/_modal.css';
+@import 'modules/_hero.css';
+@import 'modules/_newsletter.css';
+@import 'modules/_selection.css';
+@import 'modules/_service.css';
+@import 'modules/_footer.css';
