--- a/assets/css/modules/_header.css
+++ b/assets/css/modules/_header.css
@@ -5,11 +5,14 @@
     /* PC style */
 
 .header-top{
+    position: fixed;
+    width: 100%;
     height: 80px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #E6E6E6;
-    justify-content: space-between;
+    background-color: #fff;
 }
 
 .titleBox{
@@ -57,6 +60,7 @@
     align-items: center;
     height: 70px;
     border-bottom: 1px solid #E6E6E6;
+    padding-top: 80px;
 }
 
 .panel-area{
@@ -122,8 +126,12 @@
 @media screen and (max-width: 768px) {
     /* SP style */
 .header-top{
+    width: 100%;
+    background-color: #fff;
+    position: fixed;
     padding: 10px;
     border-bottom: 1px solid #E6E6E6;
+
 }
 
 .menu-btn {
