--- a/assets/css/modules/_searchForm.css
+++ b/assets/css/modules/_searchForm.css
@@ -28,9 +28,11 @@
     /* SP style */
 
 .search_container{
-    border-bottom: 2px solid #000;
-    height: 2.3em;
     width: 100%;
+    height: 2.3em;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 2px solid #000;
     overflow: hidden;
 }
 
