--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,9 @@
-@import 'modules/_common.css';
-@import 'modules/_header.css';
-@import 'modules/_searchForm.css';
-@import 'modules/_modal.css';
-@import 'modules/_hero.css';
-@import 'modules/_newsletter.css';
-@import 'modules/_selection.css';
-@import 'modules/_service.css';
-@import 'modules/_footer.css';
+@import url('https://siori413081.github.io/portfolio1/assets/css/modules/common.css');
+@import url('https://siori413081.github.io/portfolio1/assets/css/modules/header.css');
+@import url('https://siori413081.github.io/portfolio1/assets/css/modules/searchForm.css');
+@import url('https://siori413081.github.io/portfolio1/assets/css/modules/modal.css');
+@import url('https://siori413081.github.io/portfolio1/assets/css/modules/hero.css');
+@import url('https://siori413081.github.io/portfolio1/assets/css/modules/newsletter.css');
+@import url('https://siori413081.github.io/portfolio1/assets/css/modules/selection.css');
+@import url('https://siori413081.github.io/portfolio1/assets/css/modules/service.css');
+@import url('https://siori413081.github.io/portfolio1/assets/css/modules/footer.css');
