--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 @import url('https://siori413081.github.io/portfolio1/assets/css/modules/common.css');
 @import url('https://siori413081.github.io/portfolio1/assets/css/modules/header.css');
 @import url('https://siori413081.github.io/portfolio1/assets/css/modules/searchForm.css');
+@import url('https://siori413081.github.io/portfolio1/assets/css/modules/openNav.css');
 @import url('https://siori413081.github.io/portfolio1/assets/css/modules/modal.css');
 @import url('https://siori413081.github.io/portfolio1/assets/css/modules/hero.css');
 @import url('https://siori413081.github.io/portfolio1/assets/css/modules/newsletter.css');
