--- a/assets/css/modules/header.css
+++ b/assets/css/modules/header.css
@@ -8,6 +8,7 @@
     position: fixed;
     width: 100%;
     height: 80px;
+    line-height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -98,11 +99,7 @@
     display: flex;
 }
 
-.country{
-    display: flex;
-}
-
-.user{
+.country,.user{
     margin-right: 30px;
     cursor: pointer;
 }
