--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+
 @import url('https://siori413081.github.io/portfolio1/assets/css/modules/common.css');
 @import url('https://siori413081.github.io/portfolio1/assets/css/modules/header.css');
 @import url('https://siori413081.github.io/portfolio1/assets/css/modules/searchForm.css');
@@ -9,3 +10,16 @@
 @import url('https://siori413081.github.io/portfolio1/assets/css/modules/selection.css');
 @import url('https://siori413081.github.io/portfolio1/assets/css/modules/service.css');
 @import url('https://siori413081.github.io/portfolio1/assets/css/modules/footer.css');
+
+/*
+@import url('./modules/common.css');
+@import url('./modules/header.css');
+@import url('./modules/searchForm.css');
+@import url('./modules/openNav.css');
+@import url('./modules/spOpenMenu.css');
+@import url('./modules/modal.css');
+@import url('./modules/hero.css');
+@import url('./modules/newsletter.css');
+@import url('./modules/selection.css');
+@import url('./modules/service.css');
+@import url('./modules/footer.css');
