--- a/assets/css/modules/openNav.css
+++ b/assets/css/modules/openNav.css
@@ -70,7 +70,7 @@
     transition: all 0.3s;
 }
 
-.open-nav.panelActive{
+.open-nav.active{
     opacity: 1;
     z-index: 999;
 }
@@ -86,8 +86,7 @@
 }
 
 #open-btn-search.active{
-    opacity: 0;
-    z-index: -1;
+    display: none;
 }
 
 .close-btn-x{
@@ -97,6 +96,11 @@
     top: 80px;
     right: 10px;
     cursor: pointer;
+}
+
+.close-btn-x.active{
+    z-index: 999;
+    opacity: 1;
 }
 
 }
