--- a/assets/css/modules/spOpenMenu.css
+++ b/assets/css/modules/spOpenMenu.css
@@ -14,6 +14,10 @@
 @media screen and (max-width: 768px) {
     /* SP style */
 
+.hamburger-menu-btn.active{
+
+}
+
 .sp-open-menu{
     position: fixed;
     z-index: 999;
@@ -25,7 +29,7 @@
     transition: all 0.6s;
 }
 
-.sp-open-menu.start{
+.sp-open-menu.active{
     left: 0;
 }
 
@@ -39,44 +43,4 @@
     font-size: 16px;
 }
 
-.hamburger-menu-btn span{
-    display: inline-block;
-    transition: all .4s;
-    position: absolute;
-    left: 14px;
-    height: 3px;
-    border-radius: 2px;
-	background-color: #666;
-  	width: 45%;
-}
-
-.hamburger-menu-btn span:nth-of-type(1) {
-	top:15px;	
-}
-
-.hamburger-menu-btn span:nth-of-type(2) {
-	top:23px;
-}
-
-.hamburger-menu-btn span:nth-of-type(3) {
-	top:31px;
-}
-
-.hamburger-menu-btn.active span:nth-of-type(1) {
-    top: 18px;
-    left: 18px;
-    transform: translateY(6px) rotate(-45deg);
-    width: 30%;
-}
-
-.hamburger-menu-btn.active span:nth-of-type(2) {
-	opacity: 0;
-}
-
-.hamburger-menu-btn.active span:nth-of-type(3){
-    top: 30px;
-    left: 18px;
-    transform: translateY(-6px) rotate(45deg);
-    width: 30%;
-}
 }
