--- a/assets/css/modules/header.css
+++ b/assets/css/modules/header.css
@@ -4,6 +4,10 @@
 @media screen and (min-width: 769px) {
     /* PC style */
 
+.header-sp{
+    display: none;
+}
+
 .header-top{
     position: fixed;
     width: 100%;
@@ -75,6 +79,10 @@
     text-align: center;
 }
 
+.panel.active{
+    display: block;
+}
+
 .panel-list{
     display: flex;
     height: 100%;
@@ -85,10 +93,6 @@
     line-height: 70px;
     margin: 0 10px;
     cursor: pointer;
-}
-
-.panel.active{
-    display: block;
 }
 
 .panel-addClass{
@@ -126,24 +130,35 @@
 
 @media screen and (max-width: 768px) {
     /* SP style */
+
+.header-pc{
+    display: none;
+}
+
+.header-sp{
+    position: relative;
+}
+
 .header-top{
-    width: 100%;
-    background-color: #fff;
     position: fixed;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    background-color: #fff;
     padding: 10px;
     border-bottom: 1px solid #E6E6E6;
     z-index: 3;
 }
 
 .hamburger-menu-btn {
-    position: fixed;
-    top: 0;
-    left: 0;
     display: flex;
-    height: 60px;
-    width: 60px;
     justify-content: center;
     align-items: center;
+    height: 60px;
+    width: 60px;
     z-index: 90;
     cursor: pointer;
 }
@@ -165,10 +180,6 @@
 
 .hamburger-menu-btn span:after {
     top: 8px;
-}
-
-.titleBox{
-    text-align: center;
 }
 
 .mainTitle{
@@ -193,6 +204,18 @@
     display: none;
 }
 
+.bag{
+    margin-right: 20px;
+}
+
+.header-bottom{
+    position: absolute;
+    top: 70px;
+    width: 100%;
+    height: 50px;
+    background-color: #fff;
+    padding: 0 10px;
+}
 
 
 }
