--- a/assets/css/modules/searchForm.css
+++ b/assets/css/modules/searchForm.css
@@ -32,10 +32,10 @@
     /* SP style */
 
 .search_container{
-    width: 100%;
-    height: 2.3em;
+    height: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     border-bottom: 2px solid #000;
     overflow: hidden;
 }
