--- a/assets/css/modules/service.css
+++ b/assets/css/modules/service.css
@@ -35,7 +35,7 @@
     top: 15%;
     left: 50%;
     transform: translate(-50%,-20%);
-    font-size: 5vw;
+    font-size: 4vw;
     z-index: 2;
 }
 
@@ -44,7 +44,7 @@
     top: 15%;
     left: 50%;
     transform: translate(-50%,-20%);
-    font-size: 5vw;
+    font-size: 4vw;
     z-index: 2;
 }
 
@@ -53,7 +53,7 @@
     top: 15%;
     left: 50%;
     transform: translate(-50%,-20%);
-    font-size: 5vw;
+    font-size: 4vw;
     z-index: 2;
 }
 
@@ -84,6 +84,7 @@
 
 @media screen and (max-width: 768px) {
     /* SP style */
+
 
 .slick-list{
     padding: 0 10% 0 10% !important;/*前後のスライドチラ見せ*/
@@ -116,6 +117,11 @@
     background-color: #1f5180;
 }
 
+.boutique.active{
+    transform: rotate(10deg);
+    transition: all 0.3s;
+}
+
 .boutiqueTitle{
     position: absolute;
     top: -30px;
@@ -137,6 +143,11 @@
     background-color: #2e8181;
 }
 
+.cafe.active{
+    transform: rotate(10deg);
+    transition: all 0.3s;
+}
+
 .cafeTitle{
     position: absolute;
     top: -30px;
@@ -156,6 +167,11 @@
     width: 100%;
     height: 450px;
     background-color: #fc5050;
+}
+
+.musique.active{
+    transform: rotate(10deg);
+    transition: all 0.3s;
 }
 
 .musiqueTitle{
