--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,7 @@
 @import url('https://siori413081.github.io/portfolio1/assets/css/modules/service.css');
 @import url('https://siori413081.github.io/portfolio1/assets/css/modules/footer.css');
 @import url('https://siori413081.github.io/portfolio1/assets/css/modules/jQuery.css');
+@import url('https://siori413081.github.io/portfolio1/assets/css/modules/openMenu.css');
 
 /*
 @import url('./modules/common.css');
@@ -23,4 +24,5 @@
 @import url('./modules/service.css');
 @import url('./modules/footer.css');
 @import url('./modules/jQuery.css');
+@import url('./modules/openMenu.css');
 */
