--- a/assets/css/modules/common.css
+++ b/assets/css/modules/common.css
@@ -8,6 +8,16 @@
     background-color: #fff;
 }
 
+a {
+    text-decoration: none;
+    color : inherit;
+}
+
+body.active {
+    height: 100%;
+    overflow: hidden;
+}
+
 }
 
 @media screen and (max-width: 768px) {
@@ -18,6 +28,17 @@
 .wrapper{
     background-color: #fff;
 }
+
+a {
+    text-decoration: none;
+    color : inherit;
+}
+
+body.active {
+    height: 100%;
+    overflow: hidden;
+}
+
 
 
 }
