--- a/assets/css/modules/header.css
+++ b/assets/css/modules/header.css
@@ -8,6 +8,10 @@
     display: none;
 }
 
+.header-pc{
+    position: relative;
+}
+
 .header-top{
     position: fixed;
     width: 100%;
@@ -24,10 +28,14 @@
     text-align: center;
 }
 
+.titleBox a{
+    text-decoration: none;
+    color: #000;
+}
+
 .mainTitle{
     font-size: 30px;
     text-align: center;
-    cursor: pointer;
 }
 
 .subTitle{
@@ -43,6 +51,11 @@
 .tab-area{
     display: flex;
     height: 100%;
+}
+
+.tab a{
+    text-decoration: none;
+    color: #000;
 }
 
 .tab{
@@ -79,6 +92,11 @@
     text-align: center;
 }
 
+.panel a{
+    text-decoration: none;
+    color: #000;
+}
+
 .panel.active{
     display: block;
 }
@@ -92,7 +110,6 @@
     font-size: 12px;
     line-height: 70px;
     margin: 0 10px;
-    cursor: pointer;
 }
 
 .panel-addClass{
@@ -108,6 +125,34 @@
     align-items: center;
     margin-right: 30px;
     cursor: pointer;
+}
+
+.country-arrow{
+    border-bottom: solid 2px #000;
+    border-right: solid 2px #000;
+    width: 8px;
+    height: 8px;
+    transform: rotate(45deg);
+    margin-left: 10px;
+}
+
+.country-arrow-active{
+    border-top: solid 2px #000;
+    border-left: solid 2px #000;
+    width: 8px;
+    height: 8px;
+    transform: rotate(45deg);
+    margin-left: 10px;
+    transition: all 0.3s;
+}
+
+.language-arrow{
+    border-bottom: solid 2px #000;
+    border-right: solid 2px #000;
+    width: 8px;
+    height: 8px;
+    transform: rotate(45deg);
+    margin-left: 10px;
 }
 
 .language{
@@ -128,34 +173,6 @@
     cursor: pointer;
 }
 
-.bottom-menu{
-    position: fixed;
-    bottom: -120%;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    padding: 20px 40px;
-    background-color: #fff;
-    transition: all 0.6s;
-}
-
-.bottom-menu.active{
-    top: 80px;
-    bottom: 0;
-}
-
-.bottom-menu ul{
-    line-height: 3;
-}
-
-.bottom-menu li{
-    font-size: 12px;
-    color: #000;
-}
-
-.bottom-menu li:first-child{
-    color: #999;
-}
 
 }
 
@@ -246,34 +263,7 @@
     padding: 0 10px;
 }
 
-.bottom-menu{
-    position: fixed;
-    bottom: -120%;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    padding: 20px 40px;
-    background-color: #fff;
-    transition: all 0.6s;
-}
 
-.bottom-menu.active{
-    top: 150px;
-    bottom: 0;
-}
-
-.bottom-menu ul{
-    line-height: 3;
-}
-
-.bottom-menu li{
-    font-size: 12px;
-    color: #000;
-}
-
-.bottom-menu li:first-child{
-    color: #999;
-}
 
 
 }
