--- a/assets/css/modules/searchForm.css
+++ b/assets/css/modules/searchForm.css
@@ -14,6 +14,7 @@
     overflow: hidden;
 }
 .search_container input[type="text"]{
+    width: 100%;
     border: none;
     line-height: 80px;
     font-size: 12px;
@@ -76,6 +77,7 @@
 }
 
 .search_container input[type="text"]{
+    width: 100%;
     border: none;
     height: 2.0em;
     font-size: 16px;
