--- a/assets/css/modules/modal.css
+++ b/assets/css/modules/modal.css
@@ -11,18 +11,24 @@
     width: 100%;
     height: 100%;
     background-color: #000;
-    opacity: 0.7;
     z-index: 3;
 }
 
-.modal-content {
+.modal-content{
+    display: none;
+}
+
+.modal-content.active{
+    display: block;
     position: fixed;
     top: 37%;
-    left: 50%;
+    left: 46%;
     width: 400px;
     height: 500px;
     margin: -150px 0 0 -150px;
     background-color: #fff;
+    z-index: 4;
+    transition: all 0.5s;
 }
 
 .modal-close {
