--- a/assets/css/modules/header.css
+++ b/assets/css/modules/header.css
@@ -206,7 +206,7 @@
     width: 100%;
     height: 50px;
     background-color: #fff;
-    padding: 10px;
+    padding: 10px 0;
     border-bottom: 1px solid #E6E6E6;
     z-index: 3;
 }
