--- a/assets/css/modules/openMenu.css
+++ b/assets/css/modules/openMenu.css
@@ -143,6 +143,7 @@
 
 .login-box.active{
     border: 2px solid #000;
+    padding: 9px;
 }
 
 .login-box p{
@@ -158,7 +159,7 @@
 
 .f{
     width: 200px;
-    padding: 10px 0;
+    padding: 15px 0;
     text-align: center;
     font-size: 14px;
     font-weight: bold;
