--- a/assets/css/modules/selection.css
+++ b/assets/css/modules/selection.css
@@ -187,29 +187,19 @@ transform: translate(-70%, -50%)rotate(135deg);
 @media screen and (max-width: 768px) {
     /* SP style */
 
-.selection-slider{
-    width: 100%;
-}
-
-.slider.slick-slide{
-    margin: 0 5px;
-}
-
 .shopItemList{
     display: flex;
 }
 
 .shopItem{
-    display: block;
-    width: 100%;
-    height: 100%;
+    width: 200px;
+    height: 450px;
     margin-right: 5px;
-    object-fit: cover;
     cursor: pointer;
 }
 
 .selection-item-slider{
-    height: 400px;
+    height: 100%;
     background-image: url(../../../assets/images/selection01.jpg);
     background-size: cover;
 }
