--- a/assets/css/modules/spOpenMenu.css
+++ b/assets/css/modules/spOpenMenu.css
@@ -15,7 +15,7 @@
     /* SP style */
 
 .sp-open-menu{
-    position: absolute;
+    position: fixed;
     z-index: 999;
     top: 0;
     left: -120%;
@@ -24,6 +24,7 @@
     padding: 20px;
     background-color: #fff;
     transition: all 0.6s;
+    overflow: auto;
 }
 
 .sp-open-menu.active{
@@ -39,10 +40,18 @@
 
 }
 
+.sp-tab{
+    overflow-x: scroll;
+}
+
+.sp-tab::-webkit-scrollbar{
+    display: none;
+}
+
 .sp-tab ul{
+    width: 700px;
     display: flex;
     margin-bottom: 40px;
-    z-index: 999;
 }
 
 .sp-tab li{
@@ -91,7 +100,7 @@
     width: 30px;
     height: 30px;
     cursor: pointer;
-    margin-right: 100px;
+    margin-right: 20px;
 }
 
 .sp-close-x::before,.sp-close-x::after{/*共通*/
