--- a/assets/css/modules/selection.css
+++ b/assets/css/modules/selection.css
@@ -187,19 +187,24 @@ transform: translate(-70%, -50%)rotate(135deg);
 @media screen and (max-width: 768px) {
     /* SP style */
 
+.slick-track{
+    width: 1025px !important;
+    height: 100%;
+}
+
 .shopItemList{
     display: flex;
+    height: 600px;
 }
 
 .shopItem{
-    width: 200px;
-    height: 450px;
+    width: 19% !important;
     margin-right: 5px;
     cursor: pointer;
 }
 
 .selection-item-slider{
-    height: 100%;
+    height: 90%;
     background-image: url(../../../assets/images/selection01.jpg);
     background-size: cover;
 }
